fix: don't rely on automatic dark mode

--- a/web/app/themes/twin-tails/resources/styles/app.scss
+++ b/web/app/themes/twin-tails/resources/styles/app.scss
@@ -57,11 +57,6 @@ body, #app {
 
   background-color: var(--color-bg, var(--color-bg-light));
   color: var(--color-text, var(--color-text-light));
-
-  @media (prefers-color-scheme: dark) {
-    background-color: var(--color-bg-dark);
-    color: var(--color-text-dark);
-  }
 }
 
 img {
@@ -82,12 +77,7 @@ footer {
 
 a {
   text-decoration: none;
-
   color: var(--color-text, var(--color-text-light));
-
-  @media (prefers-color-scheme: dark) {
-    color: var(--color-text-dark);
-  }
 }
 
 .h1 {
